# OOP_Lab

./: CMakeLists.txt  README.md  censor.cpp  censor.h  main.cpp  test.cpp
